5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1680_2474.log
== TEST (2019-05-07 16:30:01) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

x = 1
while (x <=5):
	print(x)
	x = x+1
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:30:32) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

x = 1
while (x <= 1978):
	print(x)
	x = x+1
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:31:17) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

x = 1
while (x <= 5):
	print(x)
	x = x+1
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:31:56) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

x = 1
while (x <= 5):
	x = x+1
	print(x)
-- OUTPUT:
2
3
4
5
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:32:11) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

x = 1
while (x <= 5):
	print(x)
	x = x+2
-- OUTPUT:
1
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:32:23) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

x = 0
while (x <= 5):
	print(x)
	x = x+2
-- OUTPUT:
0
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:33:17) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

x = 1
while (x <= 5):
	print(x)
x = x+1
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:33:17) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

x = 1
while (x <= 5):
	print(x)
x = x+1
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:48:19) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = o
nota = 1

while (nota >=0 and nota <=10):
	nota = float(input("Digite a nota do aluno"))
	if (nota >= 5.0 and nota <= 10): 	
		cont = cont + 1
print("Passaram: ", cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    cont = o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:14) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = o
nota = 1

while (nota >=0 and nota <=10):
	nota = float(input("Digite a nota do aluno"))
	if (nota >= 5.0 and nota <= 10): 	
		cont = cont + 1
print("Passaram: ", cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    cont = o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:22) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

while (nota >=0 and nota <=10):
	nota = float(input("Digite a nota do aluno"))
	if (nota >= 5.0 and nota <= 10): 	
		cont = cont + 1
print("Passaram: ", cont)		
-- OUTPUT:
Passaram:  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:43) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

while (nota >=0 and nota <=10):
	nota = float(input("Digite a nota do aluno: "))
	if (nota >= 5.0 and nota <= 10): 	
		cont = cont + 1
print("Passaram: ", cont)		
-- OUTPUT:
Passaram:  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:50:51) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

while (nota >=0 and nota <=10):
	nota = float(input("Digite a nota do aluno: "))
	if (nota >= 5.0 and nota <= 10): 	
		cont = cont + 1
print("Passaram: ", cont)		
-- OUTPUT:
Passaram:  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:54:53) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

while (0 <= nota <=10):
	nota = float(input("Digite a nota do aluno: "))
	if (nota >= 5.0 and nota <= 10): 	
		cont = cont + 1
print("Passaram: ", cont)		

-- OUTPUT:
Passaram:  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:00:10) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

#while (0 <= nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		


cont = 0 # Conta no. de alunos
soma = 0 # Acumula soma das notas

nota = float(input("Digite a nota do aluno: "))
while (0 <= nota <=10):
	soma = soma + nota # Acumula nota
	cont = cont + 1 # Atualiza no. de notas
	nota = float(input("Digite a nota do aluno: "))
if (cont > 0):
	print(round(soma/cont, 2))




-- OUTPUT:
Passaram:  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:12) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

#while (0 <= nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		


H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: ")) 	

# Variavel contadora
dia = 0
# Laco de acumulacao
while (V > 0 and H > 0):
H = H - V
V = 2 * V - M
dia = dia + 1

if (H > 0):
Testa qual das variáveis
msg = "LIVRE"

else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)







-- ERROR:
File "XXXX", line 34
    H = H - V
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:28) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

#while (0 <= nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		


H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: ")) 	

# Variavel contadora
dia = 0
# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
Testa qual das variáveis
msg = "LIVRE"

else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)







-- ERROR:
File "XXXX", line 39
    Testa qual das variáveis
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:44) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

#while (0 <= nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		


H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: ")) 	

# Variavel contadora
dia = 0
# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)







-- OUTPUT:
LIVRE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:23:01) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

#while (0 <= nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		


H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: ")) 	

# Variavel contadora
dia = 0
# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)







-- OUTPUT:
LIVRE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:23:10) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

#while (0 <= nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		


H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: ")) 	

# Variavel contadora
dia = 0
# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)







-- OUTPUT:
LIVRE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:25:07) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

#while (0 <= nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		


H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: ")) 	

# Variavel contadora
dia = 0
# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1
	print(H)

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)







-- OUTPUT:
27
LIVRE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:27:14) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

#cont = 1
#while (x <= 5):
#	print(x)
#	x = x+1

cont = 0
nota = 1

#while (nota >=0 and nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		

#while (0 <= nota <=10):
#	nota = float(input("Digite a nota do aluno: "))
#	if (nota >= 5.0 and nota <= 10): 	
#		cont = cont + 1
#print("Passaram: ", cont)		


H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: ")) 	

# Variavel contadora
dia = 0
# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1


if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
print(V)







-- OUTPUT:
LIVRE
1
-2012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:32:13) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))

h = (q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7
print(h)
-- OUTPUT:
0.7999999999992724
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:32:43) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))

h = (q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7
print(h)
-- OUTPUT:
0.7999999999992724
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:33:42) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))

h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
print(h)
-- OUTPUT:
0.7999999999992724
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:34:00) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))

h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
print(h)
-- OUTPUT:
0.7999999999992724
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:46:50) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:26:06) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:32:14) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+((k/100)/4)+5*k/100)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:33:39) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+((k/100)/4)+5*k/100)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:40:45) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k)
print(j)
if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
2016
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:42:15) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
print(j)
if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
20
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:43:44) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:44:07) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+int(k)/4+5*int(k))%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:45:02) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:45:20) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:45:58) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:46:13) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:46:32) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:47:32) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
4
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:48:04) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
4
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 12:48:21) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
4
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:42:59) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
2015
14
2
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:43:33) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
2015
14
2
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:44:34) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	m = m
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
2015
14
2
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:45:32) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:45:54) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:46:24) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:47:23) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = int((q+(13*(m+1)/5)+k%100+((k%100)/4)+(j/4)+5*j)%7)
	print(marco)
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:51:59) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
k = k%100

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k+(k/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = int((q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7)
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:54:55) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
k = k%100

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k+(k/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = (q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:55:07) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
k = k%100

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k+(k/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = (q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 14:55:28) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
k = k%100

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = int((q+(13*(m+1)/5)+k+(k/4)+(j/4)+5*j)%7)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = (q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- EXECUTION TIME:
0.747108
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
16
3
3
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 14:56:02) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
k = k%100

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = (q+int((13*(m+1)/5))+k+int(k/4)+int(j/4)+5*j)%7
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = (q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- EXECUTION TIME:
0.726827
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
16
3
3
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:56:15) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
k = k%100

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = (q+int((13*(m+1)/5))+k+int(k/4)+int(j/4)+5*j)%7
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = (q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 14:57:05) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
k = k%100

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = (q+int((13*(m+1)/5))+k+int(k/4)+int(j/4)+5*j)%7
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = (q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	print(k)
	print(m)
	print(h)
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 14:58:01) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?

q = int(input("Digite o dia do mes: "))
m = int(input("Digite o mes: "))
k = int(input("Digite o ano: "))
j = int(k/100)
k = k%100

if (1<= m <=2):
	m = m + 12
	k = k-1
	h = (q+int((13*(m+1)/5))+k+int(k/4)+int(j/4)+5*j)%7
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
else:
	h = (q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	if(h == 0):
		print("sabado")
	elif(h == 1):	
		print("domingo")
	elif(h == 2):	
		print("segunda-feira")
	elif(h == 3):	
		print("terca-feira")		
	elif(h == 4):	
		print("quarta-feira")		
	elif(h == 5):	
		print("quinta-feira")		
	elif(h == 6):	
		print("sexta-feira")		
-- EXECUTION TIME:
0.914678
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
